--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.16MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-6.48MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-968.4KB/s(Youtube:不良林), server: 103.172.116.9, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
   - {name: 🇨🇳 中国-10.37MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-391.4KB/s(Youtube:不良林), server: 103.172.116.9, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇯🇵 日本-5.34MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.09MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-345.4KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16040, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇩🇪 德国-3.20MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
-  - {name: 🇩🇪 德国-308.8KB/s(Youtube:不良林), server: 5.183.179.139, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇸🇬 新加坡-462.9KB/s(Youtube:不良林), server: 103.172.116.9, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇸🇬 新加坡-601.0KB/s(Youtube:不良林), server: 103.172.116.9, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇯🇵 日本-8.77MB/s(Youtube:不良林), server: jpaz2.xmrth-node.xyz, port: 13240, type: vmess, uuid: ff51ca4a-6050-3e26-a037-88b0dd62d138, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: jpaz2.xmrth-node.xyz}}
+  - {name: 🇬🇧 英国-2.10MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.10MB/s(Youtube:不良林) 2, server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-3.74MB/s(Youtube:不良林), server: 129.154.48.221, port: 37372, type: vmess, uuid: 6f4454a9-e732-46c6-c50f-73f13da31f7b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.14MB/s(Youtube:不良林), server: 103.172.116.9, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇭🇰 香港-409.3KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-391.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-308.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-462.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-601.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.10MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-3.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-409.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-391.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-308.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-462.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-601.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.10MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-3.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-409.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-391.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-308.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-462.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-601.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.10MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-3.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-409.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-409.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-391.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-308.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-462.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-601.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.10MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-3.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-409.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-391.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-308.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-462.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-601.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.10MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-3.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-409.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-391.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-308.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-462.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-601.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.10MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-3.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-409.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.16MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-391.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-345.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.20MB/s(Youtube:不良林)
-      - 🇩🇪 德国-308.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-462.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-601.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.10MB/s(Youtube:不良林) 2
+      - 🇰🇷 韩国-3.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
+      - 🇭🇰 香港-409.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
