--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-6.48MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-968.4KB/s(Youtube:不良林), server: 103.172.116.9, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-10.37MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.86MB/s(Youtube:不良林), server: 169.197.142.99, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇯🇵 日本-8.77MB/s(Youtube:不良林), server: jpaz2.xmrth-node.xyz, port: 13240, type: vmess, uuid: ff51ca4a-6050-3e26-a037-88b0dd62d138, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: jpaz2.xmrth-node.xyz}}
-  - {name: 🇬🇧 英国-2.10MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.10MB/s(Youtube:不良林) 2, server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-3.74MB/s(Youtube:不良林), server: 129.154.48.221, port: 37372, type: vmess, uuid: 6f4454a9-e732-46c6-c50f-73f13da31f7b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.14MB/s(Youtube:不良林), server: 103.172.116.9, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇭🇰 香港-409.3KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.18MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-612.8KB/s(Youtube:不良林), server: 103.172.116.9, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: 169.197.142.99, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇺🇸 美国-3.22MB/s(Youtube:不良林), server: 169.197.142.99, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇸🇬 新加坡-459.2KB/s(Youtube:不良林), server: 103.172.116.9, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
+  - {name: 🇸🇬 新加坡-613.1KB/s(Youtube:不良林), server: 103.172.116.9, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 🇸🇬 新加坡-520.2KB/s(Youtube:不良林), server: 103.172.116.9, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-6.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.10MB/s(Youtube:不良林) 2
-      - 🇰🇷 韩国-3.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
-      - 🇭🇰 香港-409.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-612.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-459.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-613.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-520.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-6.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.10MB/s(Youtube:不良林) 2
-      - 🇰🇷 韩国-3.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
-      - 🇭🇰 香港-409.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-612.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-459.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-613.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-520.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-6.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.10MB/s(Youtube:不良林) 2
-      - 🇰🇷 韩国-3.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
-      - 🇭🇰 香港-409.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-612.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-459.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-613.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-520.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-409.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-6.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.10MB/s(Youtube:不良林) 2
-      - 🇰🇷 韩国-3.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
-      - 🇭🇰 香港-409.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-612.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-459.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-613.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-520.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-6.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.10MB/s(Youtube:不良林) 2
-      - 🇰🇷 韩国-3.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
-      - 🇭🇰 香港-409.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-612.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-459.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-613.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-520.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-6.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.10MB/s(Youtube:不良林) 2
-      - 🇰🇷 韩国-3.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
-      - 🇭🇰 香港-409.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-612.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-459.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-613.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-520.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-6.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.53MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-968.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
       - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.10MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.10MB/s(Youtube:不良林) 2
-      - 🇰🇷 韩国-3.74MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.14MB/s(Youtube:不良林)
-      - 🇭🇰 香港-409.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-612.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-459.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-613.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-520.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
