--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.86MB/s(Youtube:不良林), server: 169.197.142.99, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇯🇵 日本-8.77MB/s(Youtube:不良林), server: jpaz2.xmrth-node.xyz, port: 13240, type: vmess, uuid: ff51ca4a-6050-3e26-a037-88b0dd62d138, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: jpaz2.xmrth-node.xyz}}
-  - {name: 🇺🇸 美国-5.18MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-612.8KB/s(Youtube:不良林), server: 103.172.116.9, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: 169.197.142.99, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-3.22MB/s(Youtube:不良林), server: 169.197.142.99, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇩🇪 德国-3.22MB/s(Youtube:不良林), server: 49.12.203.80, port: 40960, type: ss, cipher: aes-256-gcm, password: 6kA7b3f9Aw2508erQ3W7D4}
+  - {name: 🇷🇺 俄罗斯联邦-294.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-4.94MB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.86MB/s(Youtube:不良林), server: 169.197.142.99, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇸🇬 新加坡-459.2KB/s(Youtube:不良林), server: 103.172.116.9, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
   - {name: 🇸🇬 新加坡-613.1KB/s(Youtube:不良林), server: 103.172.116.9, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 🇸🇬 新加坡-520.2KB/s(Youtube:不良林), server: 103.172.116.9, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇯🇵 日本-5.16MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.09MB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.98MB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇩🇪 德国-3.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-294.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-612.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-459.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-613.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-520.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.98MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇩🇪 德国-3.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-294.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-612.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-459.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-613.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-520.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.98MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇩🇪 德国-3.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-294.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-612.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-459.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-613.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-520.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.98MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇩🇪 德国-3.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-294.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-612.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-459.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-613.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-520.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.98MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇩🇪 德国-3.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-294.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-612.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-459.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-613.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-520.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.98MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇩🇪 德国-3.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-294.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-612.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-459.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-613.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-520.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.98MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇩🇪 德国-3.22MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-294.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.86MB/s(Youtube:不良林)
-      - 🇯🇵 日本-8.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-612.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-459.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-613.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-520.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.16MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.09MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.98MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
